# s3-pull-processor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entry_points.txt  setup.cfg
.github/workflows/: docker-image.yml  publish-container.yml  pylint.yml
doc/: container.md  debug.md  developer_guide.md  openshift.md  release.md
ops/ocp/: dc.yaml  is.yaml  job_cron.yaml  job_sanity.yaml
ops/scripts/: artifact_generator.sh  container_image_build.sh  install.sh  lib.sh
s3_pull_processor/: actions.py  artifact.py  aws.py  pull.py  s3_pull_processor.py  upload.py  util.py
test/: test_e2e.py  test_message.py  test_s3_files.py  test_sqs_messages.py  test_wipe_out.py
