[metadata]
name = s3-pull-processor
author = Eduardo Cerqueira
description = A cli to upload and retrieve data to/from object storage and processing data running actions on it.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
entry_points = file:entry_points.txt
install_requires =
    click
    pytest
    boto3

setup_requires = setuptools_scm
python_requires = >=3.6
include_package_data = True
packages = find:

[options.extras_require]
dev =
    flake8
    pylint
    pre-commit

[flake8]
max-line-length = 100
